fix overflow issue

--- a/root/2d/style/main.css
+++ b/root/2d/style/main.css
@@ -1,6 +1,3 @@
-#maze-grid {
-    background-color: black;
-}
 body {
     background-color: black;
     color: white;
